%% Mission model — Order Processing & Settlement Engine
%% Note: RiskLimit and Fee are attributes (doubles), not classes — omitted as separate nodes.
classDiagram
    class Client {
        -String clientId
        -String name
        -double riskLimit
        +getPortfolio() Portfolio
        +getRiskLimit() double
    }

    class Portfolio {
        -List~Holding~ holdings
        +getHolding(Instrument) Holding
        +totalValue() double
        +wouldExceedRiskLimit(Order, double) boolean
    }

    class Holding {
        -double quantity
        +getQuantity() double
        +adjust(double delta)
    }

    class Order {
        -String orderId
        -String side
        -double quantity
        -double price
        -String status
        -String rejectionReason
        +accept()
        +reject(String reason)
        +getValue() double
    }

    class Instrument {
        <<abstract>>
        -String ticker
        +getTicker() String
        +calculateFee(double tradeValue) double
    }

    class Feeable {
        <<interface>>
        +calculateFee(double tradeValue) double
    }

    class BondInstrument {
        +calculateFee(double tradeValue) double
    }

    class CryptoInstrument {
        +calculateFee(double tradeValue) double
    }

    class Confirmation {
        -Order order
        -double feeCharged
        +getOrder() Order
        +getFeeCharged() double
    }

    class OrderValidator {
        +validate(Order, Portfolio) boolean
    }

    class OrderProcessor {
        +process(Order, Portfolio)
    }

    class SettlementReport {
        -List~Order~ orders
        +add(Order)
        +produce()
    }

    Client "1" *-- "1" Portfolio
    Portfolio "1" *-- "*" Holding
    Holding --> Instrument
    Order --> Client
    Order --> Instrument
    Instrument ..|> Feeable
    BondInstrument --|> Instrument
    CryptoInstrument --|> Instrument
    Confirmation --> Order
    OrderValidator ..> Order
    OrderValidator ..> Portfolio
    OrderProcessor ..> OrderValidator
    OrderProcessor ..> Holding
    OrderProcessor ..> Instrument
    OrderProcessor ..> SettlementReport
    SettlementReport "1" o-- "*" Order
